--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -3,17 +3,23 @@ $body-bg: #f8fafc;
 
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
+$font-family-special: 'Reenie Beanie', cursive;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
 // Colors
-$blue: #3490dc;
+$blue: #344d62;
 $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f66d9b;
 $red: #e3342f;
 $orange: #f6993f;
-$yellow: #ffed4a;
-$green: #38c172;
+$yellow: #e5cf10;
+$green: #208249;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+$white: #ffffff;
+
+
+
+
