--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,5 +4,53 @@
 // Variables
 @import 'variables';
 
+
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+
+main {
+	height: 100%;
+}
+
+.navbar-brand {
+	font-family: $font-family-special;
+	line-height: 0.2;
+	font-size: 2.4em;
+	padding: 0;
+}
+
+.jumbotron {
+	background-image: url("/img/bg.jpg");
+	background-size: cover;
+	height: 130vh;
+
+		.counties-index {
+			background-color: white;
+			opacity: 0.9;
+			padding: 30px;
+		}
+
+}
+
+.admin-panel {
+	background-color: #f1f1f1;
+	padding: 20px;
+}
+
+.btn {
+	color: $white;
+}
+
+.btn-yellow {
+		background-color: $yellow !important;
+}
+
+.btn-green {
+	background-color: $green !important;
+}
+
+.btn-red {
+		background-color: $red !important;
+}
+
