small changes in layout on suggestions

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10772,3 +10772,11 @@ main {
 .btn-red {
   background-color: #e3342f !important;
 }
+
+.toast:not(.showing):not(.show) {
+  opacity: 1;
+}
+
+.toast {
+  box-shadow: none;
+}
