--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -53,10 +53,8 @@ main {
 
 	p {
 		text-transform: capitalize;
-
-	}
-
-	strong {
-		font-weight: 800;
+		margin-bottom: 0;
+		font-weight: 900;
+		font-size: 1em;
 	}
 }
