--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10747,7 +10747,19 @@ textarea.form-control-lg {
 }
 
 main {
-  height: 100%;
+  height: 150vh;
+  background-image: url("/img/bg.jpg");
+  background-size: cover;
+  padding-top: 20px;
+}
+
+a {
+  text-decoration: none;
+}
+
+.white-background {
+  background-color: #fff;
+  opacity: 0.9;
 }
 
 .navbar-brand {
@@ -10755,17 +10767,6 @@ main {
   line-height: 0.2;
   font-size: 2.4em;
   padding: 0;
-}
-
-.jumbotron {
-  background-image: url("/img/bg.jpg");
-  background-size: cover;
-  height: 130vh;
-}
-.jumbotron .counties-index {
-  background-color: white;
-  opacity: 0.9;
-  padding: 30px;
 }
 
 .admin-panel {
