--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,7 +12,20 @@
 
 
 main {
-	height: 100%;
+	height: 150vh;
+	background-image: url("/img/bg.jpg");
+	background-size: cover;
+	padding-top: 20px;
+}
+
+a {
+	text-decoration: none;
+}
+
+.white-background {
+	background-color: #fff;
+	opacity: 0.9;
+
 }
 
 .navbar-brand {
@@ -22,18 +35,6 @@ main {
 	padding: 0;
 }
 
-.jumbotron {
-	background-image: url("/img/bg.jpg");
-	background-size: cover;
-	height: 130vh;
-
-		.counties-index {
-			background-color: white;
-			opacity: 0.9;
-			padding: 30px;
-		}
-
-}
 
 .admin-panel {
 	background-color: #f1f1f1;
