--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,10 +16,9 @@ body {
 }
 
 main {
-	background-image: url("/img/bg.jpg");
+	background: url(/img/bg.jpg) no-repeat center center fixed;
 	background-size: cover;
 	padding: 20px;
-	height: 170vh;
 }
 
 a {
