--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,7 +18,8 @@ body {
 main {
 	background: url(/img/bg.jpg) no-repeat center center fixed;
 	background-size: cover;
-	padding: 20px;
+	padding: 30px 20px 20px 20px;
+	height: 100vh;
 }
 
 a {
